# simple_networking

./: Cargo.toml
src/client/: main.rs
src/common/: game.rs  renderer.rs
src/server/: main.rs
